# dither-web

./: Cargo.toml  README.md  build.rs  index.html
src/: main.rs
static/js/: utils.js
