[package]
name = "dither-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = { git = "https://github.com/ckampfe/console_log.git" }
# dither = { path = "/home/clark/code/personal/dither" }
dither = { git = "https://github.com/ckampfe/dither.git" }
js-sys = "0.3.54"
wasm-bindgen = "0.2.77"
web-sys = { version = "0.3.54", features = ["Performance", "Url"] }
yew = "0.18.0"

[dependencies.image]
version = "0.23"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
